Fixed black bar above keyboard on iPhone 7 On certain occasions this was happening on all iOS phones, but it no longer shows up in the simulators, or on my iPhone 7plus.

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -59,7 +59,7 @@ body {
 .headroom-ios--678--backto        { margin-top: -1vh; }
 .headroom-ios--678--full          { margin-top: -5vh; }
 .headroom-ios--678plus--secondary { margin-top: -5vh; }
-.headroom-ios--678plus--backto    { margin-top: 0vh; }
+.headroom-ios--678plus--backto    { margin-top: 0; }
 .headroom-ios--678plus--full      { margin-top: -4vh; }
 .headroom-ios--ipad--secondary    { margin-top: -3vh; }
 .headroom-ios--ipad--backto       { margin-top: 3vh; }
